--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -1,13 +1,13 @@
 name: Builder
 
-on: 
+on:
   push:
   pull_request:
-  
-job:
+
+jobs:
   builder:
-    run-on: ubuntu-20.04
-    steps: 
+    runs-on: ubuntu-20.04
+    steps:
       - name: Check Out Code
         uses: actions/checkout@v2
       - name: Setup Node
@@ -16,3 +16,10 @@ job:
           node-version: 14.x
       - name: Install deps
         run: npm install
+      - name: Run the App
+        run: nohup npm run start &
+      - name: Run HawkScan
+        uses: stackhawk/hawkscan-action@v1.2.1
+        with:
+          apiKey: ${{ secrets.HAWK_API_KEY }}
+      
